# hmm-attention

./: .gitignore  README.md  ode.py  pyproject.toml  run.sh  train.py
analysis/: README.md  __init__.py  fig01-overview.ipynb  fig02-03-full-model.ipynb  fig04a-init-scales.ipynb  fig04b-multiplicative-constant.ipynb  fig05-dataset-size.ipynb  fig06-07-infinite-data.ipynb  fig08-09-reverse-importance.ipynb  fig10-gradient-flow-simulation.ipynb  fig11-12-two-layer-transformers.ipynb  fig13-14-non-uniform-alpha.ipynb  fig15-17-overlapping-intervals.ipynb  fig18-19-sgd.ipynb  figB-rebuttal-head-dynamics.ipynb  utils.py
conf/: train.yaml
conf/experiments/: 2-layer-minimal.yaml  baseline.yaml  dataset.yaml  full_1layer.yaml  full_disection.yaml  generalization.yaml  hierarchical_dissection.yaml  hierarchical_stochastic.yaml  infinite_data.yaml  init-ablation.yaml  intervals.yaml  mc-ablation.yaml  multilevel_dissection.yaml  non-uniform-spans.yaml  overlapping-spans.yaml  (+5 more)
figures/: deeper-architectures.ipynb  hierarchical_stochastic.ipynb  non-uniform.ipynb  overlapping.ipynb  sgd.ipynb  utils.py
src/: data.py  loss.py  metrics.py  model.py  profiling.py  runner.py  trainer.py  utils.py  visualizer.py
tests/: conftest.py  test_attention_teacher.py  test_checkpoint.py  test_hierarchical_teacher.py  test_linear_teacher.py  test_lock.py  test_metric_registry.py  test_multilevel_teacher.py  test_ngram_eval.py  test_predictors.py  test_preprocess.py  test_probe_logger.py  test_probe_logger_multilevel.py  test_teacher_eval.py  test_trainer_smoke.py  test_visualizer.py
(+69 files in other folders)
